GUI: fix menu z-index

--- a/plugins/dynamix/styles/default-white.css
+++ b/plugins/dynamix/styles/default-white.css
@@ -61,7 +61,7 @@ div.title span.left{font-size:1.4rem}
 div.title span.right{font-size:1.4rem;padding-top:2px;padding-right:10px;float:right}
 div.title span img{padding-right:4px}
 div.title.shift{margin-top:-30px}
-#menu{position:absolute;top:90px;left:0;right:0;display:grid;grid-template-columns:auto minmax(400px,auto);z-index:1001}
+#menu{position:absolute;top:90px;left:0;right:0;display:grid;grid-template-columns:auto minmax(400px,auto);z-index:101}
 .nav-tile{height:4rem;line-height:4rem;padding:0;margin:0;font-size:1.2rem;letter-spacing:1.8px;background-color:#1c1b1b;white-space:nowrap;overflow-x:scroll;overflow-y:hidden;}
 .nav-tile::-webkit-scrollbar{height:8px}
 .nav-tile.right{text-align:right}
